Sat Oct 24 01:51:01 2015  Akinori MUSHA  <knu@iDaemons.org>

	* NEWS: [DOC] In the new safe call syntax, arguments are evaluated
	  only if a call is made.

	* doc/syntax/calling_methods.rdoc: Fix a typo.

Sat Oct 24 00:38:34 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/forwardable (def_instance_delegator, def_single_delegator):
	  rescue ::Exception instead of Exception in case Exception is
	  defined under the target class.
	  [ruby-core:71175] [Ruby trunk - Bug #11615]

Fri Oct 23 21:10:37 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (name_err_mesg_to_str): separate class names from the
	  receiver description.

	* vm_eval.c (make_no_method_exception, raise_method_missing): add
	  format specifiers for class names.

Fri Oct 23 18:10:32 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* .gitignore: ignored environmantal wrapper files.

Fri Oct 23 17:55:29 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/irb.rb: Ignored assignment of STDOUT.sync = true
	  when irb.rb loaded. It's affected to IDE such as Jetbrain.
	  [fix GH-864] Patch by @os97673

Fri Oct 23 16:35:08 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/ipaddr.rb, test/test_ipaddr.rb: Reject invalid address contained
	  EOL string. Patch by @kachick [fix GH-942][Bug #11513]

Fri Oct 23 16:03:26 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* file.c: fix indent style. [fix GH-977]
	* test/ruby/test_string.rb: indent. [fix GH-975]
	  [ci skip] These patches are contributed from @yui-knk

Fri Oct 23 15:46:09 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* string.c: Added method signature to include hash. It's inconsistency
	  with `gsub` method signature.
	  [ci skip][fix GH-1023] Patch by @danielevans

Fri Oct 23 15:25:51 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb: remove an empty comment line and -*-.

Fri Oct 23 15:20:02 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (gettextfile, getbinaryfile): use the safe
	  navigation operator.
