@@ -1,3 +1,8 @@
+Sat Oct 24 01:56:01 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* vm_core.h, vm_insnhelper.h: move definition of VMDEBUG
+	  from vm_insnhelper.h to vm_core.h.
+
 Sat Oct 24 01:51:01 2015  Akinori MUSHA  <knu@iDaemons.org>
 
 	* NEWS: [DOC] In the new safe call syntax, arguments are evaluated
